--- a/NPL Project Git.ipynb
+++ b/NPL Project Git.ipynb
@@ -2231,7 +2231,7 @@
     }
    ],
    "source": [
-    "print(classification_report(predictions,y_test))"
+    "print(classification_report(y_test,predictions))"
    ]
   },
   {
